Corrects content overflow

--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,10 @@ body {
   position: relative;
   z-index: -10; }
 
+@media screen and (max-width: 576px) {
+  body {
+    overflow-x: hidden; } }
+
 /* rubik-regular - latin */
 @font-face {
   font-family: "Rubik";
