--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,3 +5,8 @@ body {
     position: relative;
     z-index: -10;
 }
+@media screen and (max-width: 576px) {
+    body {
+        overflow-x: hidden;
+    }
+}
